--- a/InterritanceAndComposition/TT2/ex-1.csproj
+++ b/InterritanceAndComposition/TT2/ex-1.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>ex_abtract</RootNamespace>
+    <RootNamespace>ex_1</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
